# RAGpile

./: .gitignore  ;  CLAUDE.md  Dockerfile  Pipfile  README.md  TODO.md  \  app.py  docker-compose.yaml  init-postgres.sh
backend/: .pylintrc  Dockerfile  Pipfile  alembic.ini  app.py  docker-entrypoint.sh  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 105fe3f6fa6b_users_and_datasources_initial_migration.py  66782f4f5aec_change_user_id_to_string_add_email_.py  fef96d3d3851_add_chat_and_message_models.py
backend/src/: app.py  debug.py  dependencies.py  jwt_token.py  log.py  message_queue.py  models.py  neo4j_client.py  openai_wrapper.py
backend/src/agent/: agent.py  graph.py
backend/src/agents/: email.py  postgres_saver.py
backend/src/alembic/versions/: 0723a2235f35_add_user_name_field.py  105fe3f6fa6b_users_and_datasources_initial_migration.py  1f858a62dff4_add_schedules_table.py  6545f7841266_add_threads.py  6b02e123d831_add_user_config_field.py  8d04e779b738_add_threads_and_users.py  ac0dcc80654f_rename_user_config_to_user_integrations_.py  cc2699cdccaf_make_user_config_not_nullable.py
backend/src/auth/: jwt.py  router.py  token.py
backend/src/graph/: persistence.py
backend/src/routers/: auth.py  schedules.py  threads.py
backend/src/telegram_bot/: application.py  bot.py
backend/src/tools/: base.py  browser.py  calendar.py  email.py  graphiti.py  reddit.py  scheduler.py  search.py  toolkit.py
backend/src/tools/maps/: client.py  (+1 more)
backend/tests/telegram_bot/: application_test.py
backend/tests/tools/: browser_test.py
(+26 files in other folders)
